2008-01-04  Riccardo Murri  <riccardo.murri@gmail.com>

	* vc-bzr.el: Copyright and version headers update.
	Remove some outdated comments through the whole file.
	(vc-bzr-program-args): Remove because unused.
	(vc-bzr-log-switches): New customization option.
	(vc-bzr-command): Use LC_MESSAGES=C instead of LC_ALL=C.  No longer
	use `vc-bzr-program-args'.
	(vc-bzr-register): Fix for working with both 22.1 and CVS version of
	`vc-find-root' (patch by Andreas Hoenen).
	(vc-bzr-status): Update regex to match latest Bzr output.
	Remove redundant test.
	(vc-bzr-init-version): New function.
	(vc-bzr-unregister): Must not delete file.
	(vc-bzr-find-version): New function.
	(vc-bzr-checkout): Argument `rev' is explicit revision only if it's
	a non-empty string, otherwise take head revision.
	(vc-bzr-print-log): Pass `vc-bzr-log-switches' to "bzr log".
	(vc-bzr-diff): Simpler build of the revision spec string.
	(vc-annotate-convert-time, vc-bzr-annotate-difference):
	Remove: compatibility hacks for Emacs21, not needed in Emacs 22.
	(vc-bzr-dir-state): Add code comments.  Removed redundant statement.
	(vc-bzr-dired-state-info): Only provide custom strings for
	overloaded VC state 'edited; otherwise fallback to
	`vc-default-dired-state-info'.

2008-01-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-dir-state):
	* vc-hg.el (vc-hg-dir-state): Set the vc-backend property.

2008-01-04  Richard Stallman  <rms@gnu.org>

	* delsel.el (delete-selection-mode): Doc fix.

2008-01-04  Glenn Morris  <rgm@gnu.org>

	* version.el (emacs-copyright): Update to 2008.

2008-01-03  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-def): Do nothing if gud-running is t.
	(gud-speedbar-menu-items): Add item for gdb-var-set-format below.

	* progmodes/gdb-ui.el (gdb-var-set-format): Set the output format
	of watch expressions (only works fully with GDB 6.7 or later).

2008-01-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* time-stamp.el (time-stamp-time-zone):